k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-web
  namespace: searchable-from-book
spec:
  selector:
    app: search-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
