k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
  namespace: searchable-from-book
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
    - host: YOUR_DOMAIN
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: search-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: search-web
                port:
                  number: 3000
